<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <!-- NestedScrollView containing the rest of the layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/garcia" />

            <!-- Username EditText -->
            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="157dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/manon_garcia"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/profile"
                app:layout_constraintTop_toBottomOf="@id/rating17"/>

            <!-- RatingBar -->
            <RatingBar
                android:id="@+id/rating17"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:numStars="5"
                android:scaleX=".8"
                android:scaleY=".8"
                android:stepSize="1.0"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toBottomOf="@id/valider"
                app:layout_constraintBottom_toBottomOf="@id/profile"/>

            <!-- Comment TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:hint="@string/comment"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Validate Button -->
            <com.google.android.material.chip.Chip
                android:id="@+id/valider"
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:chipBackgroundColor="#CF2F2F"
                app:chipCornerRadius="12dp"
                app:chipStrokeColor="#CF2F2F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/username"
                android:layout_marginEnd="20dp"
                />
            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
