...
            android:layout_marginTop="4dp"
            android:progressTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/progressBar2Star"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/laisserUnAvis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Laisser un avis"
            android:layout_marginStart="35dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="-63dp"
            app:layout_constraintTop_toTopOf="@id/tvRestaurantHours"
            app:layout_constraintStart_toStartOf="@id/tvRestaurantHours"
...
